# nostd-wifi-lamp

./: .gitignore  Cargo.toml  Readme.md  diagram.json  wokwi.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
docs/: README.md
scripts/: flash.sh
src/: index.html  main.rs
