[package]
name = "nostd_wifi_lamp"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# HAL and ESP stuff
hal = { package = "esp32-hal", version= "0.15.0", features = [
    "embassy",
    "async",
    "rt",
    "embassy-time-timg0",
] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32", "log"] }
esp-alloc = { version = "0.3.0" }
# Wifi support
esp-wifi = { git = "https://github.com/Nereuxofficial/esp-wifi", default-features = false,  features = [
    "esp32",
    "async",
    "wifi",
    "utils",
] }
# Embassy, for asynchronoous programming
embassy-sync = "0.3.0"
embassy-time = { version = "0.1.5", features = ["nightly"] }
embassy-executor = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = [
    "nightly",
    "integrated-timers",
] }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = [
    "nightly",
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
] }
futures-util = { version = "0.3.29", default-features = false }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
smart-leds = "0.3.0"
serde = { version = "1.0.190", default-features = false }
serde-json-core = "0.5.1"
esp-hal-smartled = {version = "0.5.0", features = ["esp32"]}
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }


[profile.dev.package.esp-wifi]
opt-level = 3
[profile.release]
opt-level = 3
lto="off"